--- a/charts/stable/traefik-forward-auth/templates/middleware.yaml
+++ b/charts/stable/traefik-forward-auth/templates/middleware.yaml
@@ -1,7 +1,7 @@
 {{- include "common.values.setup" . -}}
 {{- if .Values.middleware.enabled -}}
 ---
-apiVersion: traefik.containo.us/v1alpha1
+apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: {{ default (include "common.names.fullname" .) .Values.middleware.nameOverride }}
